# sentiment_analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: create-pr.yml  deploy-infra.yml  zip-function.yml
cloud_function/: main.py  request_json.json  requirements.txt
get_data/: get_bq_data.py  validate_schema.py
terraform/: main.tf  variables.tf
terraform/schema/: bq_schema.avsc
