[tool.poetry]
name = "ll-sentiment-analysis"
version = "0.1.0"
description = "A cloud function and gpt base sentiment analyzer"
authors = ["João Tedeschi <joaorafaelbt@gmail.com>"]
readme = "README.md"
packages = [{include = "ll_sentiment_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
google-cloud-bigquery = "^3.13.0"
pandas-gbq = "^0.19.2"
pyyaml = "^6.0.1"
google-auth = "^2.23.4"
python-dotenv = "^1.0.0"
functions-framework = "^3.4.0"
google-cloud-pubsub = "^2.18.4"
openai = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
